error-pages-middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: error-pages-middleware
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  namespace: default
spec:
  errors:
    status:
      - "400-599"
    query: /{status}.html
    service:
      name: error-pages
      port: 80
