error-pages-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: error-pages
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  namespace: error-pages
spec:
  selector:
    app: error-pages
  ports:
  - name: http
    port: 8080
    protocol: TCP
  type: ClusterIP
