error-pages-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: error-pages-ingressroute
  annotations:
    argocd.argoproj.io/sync-wave: "3"
  namespace: default
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - kind: Rule
      match: HostRegexp(`{host:.+}`)
      priority: 1
      services:
        - kind: Service
          name: error-pages
          port: 80
      middlewares:
        - name: error-pages-middleware
